Tweaks for release.

--- a/website/html/faq.html
+++ b/website/html/faq.html
@@ -114,6 +114,7 @@ nodes.
 <li>Multiple retention periods (e.g, keep 1 backup per day for 7 days, 1 backup per week for 4 weeks, 1 backup per 4 weeks for a year).
 <li>Network rate limiting.
 <li>Storage data deduplication (in versions > 1.2.2)
+<li>Automatic client upgrade (for server and client >= 1.3.0)
 </ul>
 </FONT>
 </P>
@@ -417,7 +418,7 @@ Burp, don't suck.
 </td>
 <td align="right">
 <font color="#99ccff">
-Last updated: January 2012
+Last updated: February 2012
 </font>
 </td></tr></table>
 
