Move binaries to /usr/sbin.

--- a/website/html/why.html
+++ b/website/html/why.html
@@ -90,6 +90,7 @@ another was based on.
 <li>Retention configuration - it is just impossible to configure a sensible
 retention policy.
 <A href="http://www.adsm.org/lists/html/Bacula-users/2011-01/msg00308.html">Here is my explanation why</a>, sent to the bacula-users mailing list.
+<li>No Windows EFS support - EFS files are silently ignored.
 </ul>
 
 The main advantage that Bacula has over other open source offerings is that
@@ -147,7 +148,7 @@ Burp, don't suck.
 </td>
 <td align="right">
 <font color="#99ccff">
-Last updated: February 2012
+Last updated: March 2012
 </font>
 </td></tr></table>
 
